# cloudX-proxy

./: .releaserc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  semantic-release-plugin-custom-version.js
.ai/context/: README.md  project-overview.md
.github/workflows/: codeql.yml  release.yml  test.yml
cloudx_client/: cli.py  core.py
cloudx_proxy/: _1password.py  __init__.py  _version.py  cli.py  core.py  setup.py
tests/: test_setup.py
